# R-Homomorphic-Encryption-Package

./: DESCRIPTION  NAMESPACE  README.md  cleanup  conf49614  config.h  config.h.in  config.status  configure  configure.ac
R/: CRT.R  FandV.R  FandV_CRT.R  chinese.R  dec.R  enc.R  homomorphicOps.R  keygen.R  pars.R  parsHelp.R  save.R  zzz.R
inst/: CITATION
man/: Arithmetic.Rd  FandV.Rd  HomomorphicEncryption-package.Rd  Vectors.Rd  dec.Rd  enc.Rd  keygen.Rd  pars.Rd  parsHelp.Rd  saveFHE.Rd
src/: FandV.cpp  FandV.h  FandV_ct.cpp  FandV_ct.h  FandV_ct_mat.cpp  FandV_ct_mat.h  FandV_ct_vec.cpp  FandV_ct_vec.h  FandV_keys.cpp  FandV_keys.h  FandV_par.cpp  FandV_par.h  Makevars  Makevars.in
tests/: test-all.R
tests/testthat/: test-FandV_CRT_ct.R  test-FandV_ct.R  test-FandV_ct_mat.R  test-FandV_ct_vec.R
